@@ -1,5 +1,5 @@
 /*
- * $Id: term_api.h,v 1.68 2008/01/10 04:37:28 sfeam Exp $
+ * $Id: term_api.h,v 1.69 2008/01/14 06:38:25 sfeam Exp $
  */
 
 /* GNUPLOT - term_api.h */
@@ -275,7 +275,7 @@ typedef struct TERMENTRY {
 
 enum set_encoding_id {
    S_ENC_DEFAULT, S_ENC_ISO8859_1, S_ENC_ISO8859_2, S_ENC_ISO8859_9, S_ENC_ISO8859_15,
-   S_ENC_CP437, S_ENC_CP850, S_ENC_CP852, S_ENC_CP1250,
+   S_ENC_CP437, S_ENC_CP850, S_ENC_CP852, S_ENC_CP1250, S_ENC_CP1254,
    S_ENC_KOI8_R, S_ENC_KOI8_U,
    S_ENC_UTF8,
    S_ENC_INVALID
